exports[`invalid(1): @media (min-width: 500px) and (max-height: 999px) {} 1`] = `

  1 | @media (min-width: 500px) and (max-height: 999px) {}

`;

exports[`invalid(1): @media (min-width: 500px) and (max-height: 999px) {} 2`] = `

Message:
> 1 | @media (min-width: 500px) and (max-height: 999px) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(width >= 500px)\` over \`(min-width: 500px)\`.

Output:
  1 | @media (width >= 500px) and (max-height: 999px) {}

`;

exports[`invalid(1): @media (min-width: 500px) and (max-height: 999px) {} 3`] = `

Message:
> 1 | @media (min-width: 500px) and (max-height: 999px) {}
    |                               ^^^^^^^^^^^^^^^^^^^ Prefer \`(height <= 999px)\` over \`(max-height: 999px)\`.

Output:
  1 | @media (min-width: 500px) and (height <= 999px) {}

`;

exports[`invalid(1): @media (min-width: 500px) and (max-width: 999px) {} 1`] = `

  1 | @media (min-width: 500px) and (max-width: 999px) {}

`;

exports[`invalid(1): @media (min-width: 500px) and (max-width: 999px) {} 2`] = `

Message:
> 1 | @media (min-width: 500px) and (max-width: 999px) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(500px <= width < 1000px)\` over \`(min-width: 500px) and (max-width: 999px)\`.

Suggestion 1/1: Replace \`(min-width: 500px) and (max-width: 999px)\` with \`(500px <= width < 1000px)\`.:
  1 | @media (500px <= width < 1000px) {}

`;

exports[`invalid(1): @media (min-width: 500px) {} 1`] = `

  1 | @media (min-width: 500px) {}

`;

exports[`invalid(1): @media (min-width: 500px) {} 2`] = `

Message:
> 1 | @media (min-width: 500px) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(width >= 500px)\` over \`(min-width: 500px)\`.

Output:
  1 | @media (width >= 500px) {}

`;

exports[`invalid(10): @media (min-device-width: 320px) {} 1`] = `

  1 | @media (min-device-width: 320px) {}

`;

exports[`invalid(10): @media (min-device-width: 320px) {} 2`] = `

Message:
> 1 | @media (min-device-width: 320px) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`(device-width >= 320px)\` over \`(min-device-width: 320px)\`.

Output:
  1 | @media (device-width >= 320px) {}

`;

exports[`invalid(10): @media (min-width: 500px) and (max-width: -1px) {} 1`] = `

  1 | @media (min-width: 500px) and (max-width: -1px) {}

`;

exports[`invalid(10): @media (min-width: 500px) and (max-width: -1px) {} 2`] = `

Message:
> 1 | @media (min-width: 500px) and (max-width: -1px) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(500px <= width <= -1px)\` over \`(min-width: 500px) and (max-width: -1px)\`.

Suggestion 1/1: Replace \`(min-width: 500px) and (max-width: -1px)\` with \`(500px <= width <= -1px)\`.:
  1 | @media (500px <= width <= -1px) {}

`;

exports[`invalid(11): @media (max-device-height: 1024px) {} 1`] = `

  1 | @media (max-device-height: 1024px) {}

`;

exports[`invalid(11): @media (max-device-height: 1024px) {} 2`] = `

Message:
> 1 | @media (max-device-height: 1024px) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`(device-height <= 1024px)\` over \`(max-device-height: 1024px)\`.

Output:
  1 | @media (device-height <= 1024px) {}

`;

exports[`invalid(11): @media (min-width: 500px) and (max-width: -1e-400px) {} 1`] = `

  1 | @media (min-width: 500px) and (max-width: -1e-400px) {}

`;

exports[`invalid(11): @media (min-width: 500px) and (max-width: -1e-400px) {} 2`] = `

Message:
> 1 | @media (min-width: 500px) and (max-width: -1e-400px) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(500px <= width <= -1e-400px)\` over \`(min-width: 500px) and (max-width: -1e-400px)\`.

Suggestion 1/1: Replace \`(min-width: 500px) and (max-width: -1e-400px)\` with \`(500px <= width <= -1e-400px)\`.:
  1 | @media (500px <= width <= -1e-400px) {}

`;

exports[`invalid(12): @media (max-device-aspect-ratio: 16/9) {} 1`] = `

  1 | @media (max-device-aspect-ratio: 16/9) {}

`;

exports[`invalid(12): @media (max-device-aspect-ratio: 16/9) {} 2`] = `

Message:
> 1 | @media (max-device-aspect-ratio: 16/9) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`(device-aspect-ratio <= 16/9)\` over \`(max-device-aspect-ratio: 16/9)\`.

Output:
  1 | @media (device-aspect-ratio <= 16/9) {}

`;

exports[`invalid(12): @media (min-width: 500px) and (max-width: +999px) {} 1`] = `

  1 | @media (min-width: 500px) and (max-width: +999px) {}

`;

exports[`invalid(12): @media (min-width: 500px) and (max-width: +999px) {} 2`] = `

Message:
> 1 | @media (min-width: 500px) and (max-width: +999px) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(500px <= width < 1000px)\` over \`(min-width: 500px) and (max-width: +999px)\`.

Suggestion 1/1: Replace \`(min-width: 500px) and (max-width: +999px)\` with \`(500px <= width < 1000px)\`.:
  1 | @media (500px <= width < 1000px) {}

`;

exports[`invalid(13): @media (min-width: 500px) and (max-width: 9007199254740992px) {} 1`] = `

  1 | @media (min-width: 500px) and (max-width: 9007199254740992px) {}

`;

exports[`invalid(13): @media (min-width: 500px) and (max-width: 9007199254740992px) {} 2`] = `

Message:
> 1 | @media (min-width: 500px) and (max-width: 9007199254740992px) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(500px <= width <= 9007199254740992px)\` over \`(min-width: 500px) and (max-width: 9007199254740992px)\`.

Suggestion 1/1: Replace \`(min-width: 500px) and (max-width: 9007199254740992px)\` with \`(500px <= width <= 9007199254740992px)\`.:
  1 | @media (500px <= width <= 9007199254740992px) {}

`;

exports[`invalid(13): @media (min-width: calc(30em + 1px)) {} 1`] = `

  1 | @media (min-width: calc(30em + 1px)) {}

`;

exports[`invalid(13): @media (min-width: calc(30em + 1px)) {} 2`] = `

Message:
> 1 | @media (min-width: calc(30em + 1px)) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`(width >= calc(30em + 1px))\` over \`(min-width: calc(30em + 1px))\`.

Output:
  1 | @media (width >= calc(30em + 1px)) {}

`;

exports[`invalid(14): @media (MIN-WIDTH: 500PX) {} 1`] = `

  1 | @media (MIN-WIDTH: 500PX) {}

`;

exports[`invalid(14): @media (MIN-WIDTH: 500PX) {} 2`] = `

Message:
> 1 | @media (MIN-WIDTH: 500PX) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(width >= 500PX)\` over \`(MIN-WIDTH: 500PX)\`.

Output:
  1 | @media (width >= 500PX) {}

`;

exports[`invalid(14): @media (min-width: 500px) and (max-width: 999PX) {} 1`] = `

  1 | @media (min-width: 500px) and (max-width: 999PX) {}

`;

exports[`invalid(14): @media (min-width: 500px) and (max-width: 999PX) {} 2`] = `

Message:
> 1 | @media (min-width: 500px) and (max-width: 999PX) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(500px <= width < 1000PX)\` over \`(min-width: 500px) and (max-width: 999PX)\`.

Suggestion 1/1: Replace \`(min-width: 500px) and (max-width: 999PX)\` with \`(500px <= width < 1000PX)\`.:
  1 | @media (500px <= width < 1000PX) {}

`;

exports[`invalid(15): @media (m\\69n-width: 500px) {} 1`] = `

  1 | @media (m\\69n-width: 500px) {}

`;

exports[`invalid(15): @media (m\\69n-width: 500px) {} 2`] = `

Message:
> 1 | @media (m\\69n-width: 500px) {}
    |        ^^^^^^^^^^^^^^^^^^^^ Prefer \`(width >= 500px)\` over \`(m\\69n-width: 500px)\`.

Output:
  1 | @media (width >= 500px) {}

`;

exports[`invalid(15): @media (min-width: 500px) and (max-width: 999P\\58) {} 1`] = `

  1 | @media (min-width: 500px) and (max-width: 999P\\58) {}

`;

exports[`invalid(15): @media (min-width: 500px) and (max-width: 999P\\58) {} 2`] = `

Message:
> 1 | @media (min-width: 500px) and (max-width: 999P\\58) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(500px <= width < 1000P\\58)\` over \`(min-width: 500px) and (max-width: 999P\\58)\`.

Suggestion 1/1: Replace \`(min-width: 500px) and (max-width: 999P\\58)\` with \`(500px <= width < 1000P\\58)\`.:
  1 | @media (500px <= width < 1000P\\58) {}

`;

exports[`invalid(16): @media (min-width: 500px) and (max-width: 999px), (min-height: 300px) and (max-height: 599px) {} 1`] = `

  1 | @media (min-width: 500px) and (max-width: 999px), (min-height: 300px) and (max-height: 599px) {}

`;

exports[`invalid(16): @media (min-width: 500px) and (max-width: 999px), (min-height: 300px) and (max-height: 599px) {} 2`] = `

Message:
> 1 | @media (min-width: 500px) and (max-width: 999px), (min-height: 300px) and (max-height: 599px) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(500px <= width < 1000px)\` over \`(min-width: 500px) and (max-width: 999px)\`.

Suggestion 1/1: Replace \`(min-width: 500px) and (max-width: 999px)\` with \`(500px <= width < 1000px)\`.:
  1 | @media (500px <= width < 1000px), (min-height: 300px) and (max-height: 599px) {}

`;

exports[`invalid(16): @media (min-width: 500px) and (max-width: 999px), (min-height: 300px) and (max-height: 599px) {} 3`] = `

Message:
> 1 | @media (min-width: 500px) and (max-width: 999px), (min-height: 300px) and (max-height: 599px) {}
    |                                                   ^^^^^^^^^^^^^^^^^^^ Prefer \`(300px <= height < 600px)\` over \`(min-height: 300px) and (max-height: 599px)\`.

Suggestion 1/1: Replace \`(min-height: 300px) and (max-height: 599px)\` with \`(300px <= height < 600px)\`.:
  1 | @media (min-width: 500px) and (max-width: 999px), (300px <= height < 600px) {}

`;

exports[`invalid(16): @media screen and (min-width: 500px) {} 1`] = `

  1 | @media screen and (min-width: 500px) {}

`;

exports[`invalid(16): @media screen and (min-width: 500px) {} 2`] = `

Message:
> 1 | @media screen and (min-width: 500px) {}
    |                   ^^^^^^^^^^^^^^^^^^ Prefer \`(width >= 500px)\` over \`(min-width: 500px)\`.

Output:
  1 | @media screen and (width >= 500px) {}

`;

exports[`invalid(17): @media (min-width: 500px) and (max-width: 999px) and (min-height: 300px) and (max-height: 599px) {} 1`] = `

  1 | @media (min-width: 500px) and (max-width: 999px) and (min-height: 300px) and (max-height: 599px) {}

`;

exports[`invalid(17): @media (min-width: 500px) and (max-width: 999px) and (min-height: 300px) and (max-height: 599px) {} 2`] = `

Message:
> 1 | @media (min-width: 500px) and (max-width: 999px) and (min-height: 300px) and (max-height: 599px) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(500px <= width < 1000px)\` over \`(min-width: 500px) and (max-width: 999px)\`.

Suggestion 1/1: Replace \`(min-width: 500px) and (max-width: 999px)\` with \`(500px <= width < 1000px)\`.:
  1 | @media (500px <= width < 1000px) and (min-height: 300px) and (max-height: 599px) {}

`;

exports[`invalid(17): @media (min-width: 500px) and (max-width: 999px) and (min-height: 300px) and (max-height: 599px) {} 3`] = `

Message:
> 1 | @media (min-width: 500px) and (max-width: 999px) and (min-height: 300px) and (max-height: 599px) {}
    |                                                      ^^^^^^^^^^^^^^^^^^^ Prefer \`(300px <= height < 600px)\` over \`(min-height: 300px) and (max-height: 599px)\`.

Suggestion 1/1: Replace \`(min-height: 300px) and (max-height: 599px)\` with \`(300px <= height < 600px)\`.:
  1 | @media (min-width: 500px) and (max-width: 999px) and (300px <= height < 600px) {}

`;

exports[`invalid(17): @media print, (max-width: 999px) {} 1`] = `

  1 | @media print, (max-width: 999px) {}

`;

exports[`invalid(17): @media print, (max-width: 999px) {} 2`] = `

Message:
> 1 | @media print, (max-width: 999px) {}
    |               ^^^^^^^^^^^^^^^^^^ Prefer \`(width <= 999px)\` over \`(max-width: 999px)\`.

Output:
  1 | @media print, (width <= 999px) {}

`;

exports[`invalid(18): @media (min-width: 500px) { @media (max-height: 999px) {} } 1`] = `

  1 | @media (min-width: 500px) { @media (max-height: 999px) {} }

`;

exports[`invalid(18): @media (min-width: 500px) { @media (max-height: 999px) {} } 2`] = `

Message:
> 1 | @media (min-width: 500px) { @media (max-height: 999px) {} }
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(width >= 500px)\` over \`(min-width: 500px)\`.

Output:
  1 | @media (width >= 500px) { @media (max-height: 999px) {} }

`;

exports[`invalid(18): @media (min-width: 500px) { @media (max-height: 999px) {} } 3`] = `

Message:
> 1 | @media (min-width: 500px) { @media (max-height: 999px) {} }
    |                                    ^^^^^^^^^^^^^^^^^^^ Prefer \`(height <= 999px)\` over \`(max-height: 999px)\`.

Output:
  1 | @media (min-width: 500px) { @media (height <= 999px) {} }

`;

exports[`invalid(2): @media (max-width: 999px) and (min-width: 500px) {} 1`] = `

  1 | @media (max-width: 999px) and (min-width: 500px) {}

`;

exports[`invalid(2): @media (max-width: 999px) and (min-width: 500px) {} 2`] = `

Message:
> 1 | @media (max-width: 999px) and (min-width: 500px) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(500px <= width < 1000px)\` over \`(max-width: 999px) and (min-width: 500px)\`.

Suggestion 1/1: Replace \`(max-width: 999px) and (min-width: 500px)\` with \`(500px <= width < 1000px)\`.:
  1 | @media (500px <= width < 1000px) {}

`;

exports[`invalid(2): @media (max-width: 999px) {} 1`] = `

  1 | @media (max-width: 999px) {}

`;

exports[`invalid(2): @media (max-width: 999px) {} 2`] = `

Message:
> 1 | @media (max-width: 999px) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(width <= 999px)\` over \`(max-width: 999px)\`.

Output:
  1 | @media (width <= 999px) {}

`;

exports[`invalid(2): @media (min-width: 500px) and (min-width: 600px) {} 1`] = `

  1 | @media (min-width: 500px) and (min-width: 600px) {}

`;

exports[`invalid(2): @media (min-width: 500px) and (min-width: 600px) {} 2`] = `

Message:
> 1 | @media (min-width: 500px) and (min-width: 600px) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(width >= 500px)\` over \`(min-width: 500px)\`.

Output:
  1 | @media (width >= 500px) and (min-width: 600px) {}

`;

exports[`invalid(2): @media (min-width: 500px) and (min-width: 600px) {} 3`] = `

Message:
> 1 | @media (min-width: 500px) and (min-width: 600px) {}
    |                               ^^^^^^^^^^^^^^^^^^ Prefer \`(width >= 600px)\` over \`(min-width: 600px)\`.

Output:
  1 | @media (min-width: 500px) and (width >= 600px) {}

`;

exports[`invalid(3): @media (min-aspect-ratio: 4/3) {} 1`] = `

  1 | @media (min-aspect-ratio: 4/3) {}

`;

exports[`invalid(3): @media (min-aspect-ratio: 4/3) {} 2`] = `

Message:
> 1 | @media (min-aspect-ratio: 4/3) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`(aspect-ratio >= 4/3)\` over \`(min-aspect-ratio: 4/3)\`.

Output:
  1 | @media (aspect-ratio >= 4/3) {}

`;

exports[`invalid(3): @media (min-width: 500px) or (max-width: 999px) {} 1`] = `

  1 | @media (min-width: 500px) or (max-width: 999px) {}

`;

exports[`invalid(3): @media (min-width: 500px) or (max-width: 999px) {} 2`] = `

Message:
> 1 | @media (min-width: 500px) or (max-width: 999px) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(width >= 500px)\` over \`(min-width: 500px)\`.

Output:
  1 | @media (width >= 500px) or (max-width: 999px) {}

`;

exports[`invalid(3): @media (min-width: 500px) or (max-width: 999px) {} 3`] = `

Message:
> 1 | @media (min-width: 500px) or (max-width: 999px) {}
    |                              ^^^^^^^^^^^^^^^^^^ Prefer \`(width <= 999px)\` over \`(max-width: 999px)\`.

Output:
  1 | @media (min-width: 500px) or (width <= 999px) {}

`;

exports[`invalid(3): @media screen and (min-width: 500px) and (max-width: 999px) {} 1`] = `

  1 | @media screen and (min-width: 500px) and (max-width: 999px) {}

`;

exports[`invalid(3): @media screen and (min-width: 500px) and (max-width: 999px) {} 2`] = `

Message:
> 1 | @media screen and (min-width: 500px) and (max-width: 999px) {}
    |                   ^^^^^^^^^^^^^^^^^^ Prefer \`(500px <= width < 1000px)\` over \`(min-width: 500px) and (max-width: 999px)\`.

Suggestion 1/1: Replace \`(min-width: 500px) and (max-width: 999px)\` with \`(500px <= width < 1000px)\`.:
  1 | @media screen and (500px <= width < 1000px) {}

`;

exports[`invalid(4): @media (MIN-WIDTH: 500px) AnD (max-w\\69 dth: 999px) {} 1`] = `

  1 | @media (MIN-WIDTH: 500px) AnD (max-w\\69 dth: 999px) {}

`;

exports[`invalid(4): @media (MIN-WIDTH: 500px) AnD (max-w\\69 dth: 999px) {} 2`] = `

Message:
> 1 | @media (MIN-WIDTH: 500px) AnD (max-w\\69 dth: 999px) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(500px <= width < 1000px)\` over \`(MIN-WIDTH: 500px) AnD (max-w\\69 dth: 999px)\`.

Suggestion 1/1: Replace \`(MIN-WIDTH: 500px) AnD (max-w\\69 dth: 999px)\` with \`(500px <= width < 1000px)\`.:
  1 | @media (500px <= width < 1000px) {}

`;

exports[`invalid(4): @media (max-resolution: 2dppx) {} 1`] = `

  1 | @media (max-resolution: 2dppx) {}

`;

exports[`invalid(4): @media (max-resolution: 2dppx) {} 2`] = `

Message:
> 1 | @media (max-resolution: 2dppx) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`(resolution <= 2dppx)\` over \`(max-resolution: 2dppx)\`.

Output:
  1 | @media (resolution <= 2dppx) {}

`;

exports[`invalid(4): @media (min-width: 500px) and (orientation: landscape) and (max-width: 999px) {} 1`] = `

  1 | @media (min-width: 500px) and (orientation: landscape) and (max-width: 999px) {}

`;

exports[`invalid(4): @media (min-width: 500px) and (orientation: landscape) and (max-width: 999px) {} 2`] = `

Message:
> 1 | @media (min-width: 500px) and (orientation: landscape) and (max-width: 999px) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(width >= 500px)\` over \`(min-width: 500px)\`.

Output:
  1 | @media (width >= 500px) and (orientation: landscape) and (max-width: 999px) {}

`;

exports[`invalid(4): @media (min-width: 500px) and (orientation: landscape) and (max-width: 999px) {} 3`] = `

Message:
> 1 | @media (min-width: 500px) and (orientation: landscape) and (max-width: 999px) {}
    |                                                            ^^^^^^^^^^^^^^^^^^ Prefer \`(width <= 999px)\` over \`(max-width: 999px)\`.

Output:
  1 | @media (min-width: 500px) and (orientation: landscape) and (width <= 999px) {}

`;

exports[`invalid(5): @media (min-color: 8) {} 1`] = `

  1 | @media (min-color: 8) {}

`;

exports[`invalid(5): @media (min-color: 8) {} 2`] = `

Message:
> 1 | @media (min-color: 8) {}
    |        ^^^^^^^^^^^^^^ Prefer \`(color >= 8)\` over \`(min-color: 8)\`.

Output:
  1 | @media (color >= 8) {}

`;

exports[`invalid(5): @media (min-width: 30em) and (max-width: 50em) {} 1`] = `

  1 | @media (min-width: 30em) and (max-width: 50em) {}

`;

exports[`invalid(5): @media (min-width: 30em) and (max-width: 50em) {} 2`] = `

Message:
> 1 | @media (min-width: 30em) and (max-width: 50em) {}
    |        ^^^^^^^^^^^^^^^^^ Prefer \`(30em <= width <= 50em)\` over \`(min-width: 30em) and (max-width: 50em)\`.

Suggestion 1/1: Replace \`(min-width: 30em) and (max-width: 50em)\` with \`(30em <= width <= 50em)\`.:
  1 | @media (30em <= width <= 50em) {}

`;

exports[`invalid(5): @media (min-width: 500px) /* keep */ and (max-width: 999px) {} 1`] = `

  1 | @media (min-width: 500px) /* keep */ and (max-width: 999px) {}

`;

exports[`invalid(5): @media (min-width: 500px) /* keep */ and (max-width: 999px) {} 2`] = `

Message:
> 1 | @media (min-width: 500px) /* keep */ and (max-width: 999px) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(width >= 500px)\` over \`(min-width: 500px)\`.

Output:
  1 | @media (width >= 500px) /* keep */ and (max-width: 999px) {}

`;

exports[`invalid(5): @media (min-width: 500px) /* keep */ and (max-width: 999px) {} 3`] = `

Message:
> 1 | @media (min-width: 500px) /* keep */ and (max-width: 999px) {}
    |                                          ^^^^^^^^^^^^^^^^^^ Prefer \`(width <= 999px)\` over \`(max-width: 999px)\`.

Output:
  1 | @media (min-width: 500px) /* keep */ and (width <= 999px) {}

`;

exports[`invalid(6): @media (max-color-index: 255) {} 1`] = `

  1 | @media (max-color-index: 255) {}

`;

exports[`invalid(6): @media (max-color-index: 255) {} 2`] = `

Message:
> 1 | @media (max-color-index: 255) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`(color-index <= 255)\` over \`(max-color-index: 255)\`.

Output:
  1 | @media (color-index <= 255) {}

`;

exports[`invalid(6): @media (min-aspect-ratio: 4/3) and (max-aspect-ratio: 16/9) {} 1`] = `

  1 | @media (min-aspect-ratio: 4/3) and (max-aspect-ratio: 16/9) {}

`;

exports[`invalid(6): @media (min-aspect-ratio: 4/3) and (max-aspect-ratio: 16/9) {} 2`] = `

Message:
> 1 | @media (min-aspect-ratio: 4/3) and (max-aspect-ratio: 16/9) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`(4/3 <= aspect-ratio <= 16/9)\` over \`(min-aspect-ratio: 4/3) and (max-aspect-ratio: 16/9)\`.

Suggestion 1/1: Replace \`(min-aspect-ratio: 4/3) and (max-aspect-ratio: 16/9)\` with \`(4/3 <= aspect-ratio <= 16/9)\`.:
  1 | @media (4/3 <= aspect-ratio <= 16/9) {}

`;

exports[`invalid(6): @media (min-width /* keep */: 500px) {} 1`] = `

  1 | @media (min-width /* keep */: 500px) {}

`;

exports[`invalid(6): @media (min-width /* keep */: 500px) {} 2`] = `

Message:
> 1 | @media (min-width /* keep */: 500px) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`(width >= 500px)\` over \`(min-width /* keep */: 500px)\`.

`;

exports[`invalid(7): @media (min-monochrome: 1) {} 1`] = `

  1 | @media (min-monochrome: 1) {}

`;

exports[`invalid(7): @media (min-monochrome: 1) {} 2`] = `

Message:
> 1 | @media (min-monochrome: 1) {}
    |        ^^^^^^^^^^^^^^^^^^^ Prefer \`(monochrome >= 1)\` over \`(min-monochrome: 1)\`.

Output:
  1 | @media (monochrome >= 1) {}

`;

exports[`invalid(7): @media (min-resolution: 1.5dppx) and (max-resolution: 2dppx) {} 1`] = `

  1 | @media (min-resolution: 1.5dppx) and (max-resolution: 2dppx) {}

`;

exports[`invalid(7): @media (min-resolution: 1.5dppx) and (max-resolution: 2dppx) {} 2`] = `

Message:
> 1 | @media (min-resolution: 1.5dppx) and (max-resolution: 2dppx) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`(1.5dppx <= resolution <= 2dppx)\` over \`(min-resolution: 1.5dppx) and (max-resolution: 2dppx)\`.

Suggestion 1/1: Replace \`(min-resolution: 1.5dppx) and (max-resolution: 2dppx)\` with \`(1.5dppx <= resolution <= 2dppx)\`.:
  1 | @media (1.5dppx <= resolution <= 2dppx) {}

`;

exports[`invalid(7): @media (min-width /* keep */: 500px) and (max-width: 999px) {} 1`] = `

  1 | @media (min-width /* keep */: 500px) and (max-width: 999px) {}

`;

exports[`invalid(7): @media (min-width /* keep */: 500px) and (max-width: 999px) {} 2`] = `

Message:
> 1 | @media (min-width /* keep */: 500px) and (max-width: 999px) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`(500px <= width < 1000px)\` over \`(min-width /* keep */: 500px) and (max-width: 999px)\`.

`;

exports[`invalid(8): @media (min-horizontal-viewport-segments: 2) {} 1`] = `

  1 | @media (min-horizontal-viewport-segments: 2) {}

`;

exports[`invalid(8): @media (min-horizontal-viewport-segments: 2) {} 2`] = `

Message:
> 1 | @media (min-horizontal-viewport-segments: 2) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`(horizontal-viewport-segments >= 2)\` over \`(min-horizontal-viewport-segments: 2)\`.

Output:
  1 | @media (horizontal-viewport-segments >= 2) {}

`;

exports[`invalid(8): @media (min-width: 500px) and (max-width: /* keep */ 999px) {} 1`] = `

  1 | @media (min-width: 500px) and (max-width: /* keep */ 999px) {}

`;

exports[`invalid(8): @media (min-width: 500px) and (max-width: /* keep */ 999px) {} 2`] = `

Message:
> 1 | @media (min-width: 500px) and (max-width: /* keep */ 999px) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(500px <= width < 1000px)\` over \`(min-width: 500px) and (max-width: /* keep */ 999px)\`.

`;

exports[`invalid(8): @media (min-width: 500px) and (max-width: 999.5px) {} 1`] = `

  1 | @media (min-width: 500px) and (max-width: 999.5px) {}

`;

exports[`invalid(8): @media (min-width: 500px) and (max-width: 999.5px) {} 2`] = `

Message:
> 1 | @media (min-width: 500px) and (max-width: 999.5px) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(500px <= width <= 999.5px)\` over \`(min-width: 500px) and (max-width: 999.5px)\`.

Suggestion 1/1: Replace \`(min-width: 500px) and (max-width: 999.5px)\` with \`(500px <= width <= 999.5px)\`.:
  1 | @media (500px <= width <= 999.5px) {}

`;

exports[`invalid(9): @media (max-vertical-viewport-segments: 3) {} 1`] = `

  1 | @media (max-vertical-viewport-segments: 3) {}

`;

exports[`invalid(9): @media (max-vertical-viewport-segments: 3) {} 2`] = `

Message:
> 1 | @media (max-vertical-viewport-segments: 3) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`(vertical-viewport-segments <= 3)\` over \`(max-vertical-viewport-segments: 3)\`.

Output:
  1 | @media (vertical-viewport-segments <= 3) {}

`;

exports[`invalid(9): @media (min-width: 500px) and (max-width: 999.0000000000000001px) {} 1`] = `

  1 | @media (min-width: 500px) and (max-width: 999.0000000000000001px) {}

`;

exports[`invalid(9): @media (min-width: 500px) and (max-width: 999.0000000000000001px) {} 2`] = `

Message:
> 1 | @media (min-width: 500px) and (max-width: 999.0000000000000001px) {}
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(500px <= width <= 999.0000000000000001px)\` over \`(min-width: 500px) and (max-width: 999.0000000000000001px)\`.

Suggestion 1/1: Replace \`(min-width: 500px) and (max-width: 999.0000000000000001px)\` with \`(500px <= width <= 999.0000000000000001px)\`.:
  1 | @media (500px <= width <= 999.0000000000000001px) {}

`;

exports[`invalid(9): @media (min-width: 500px)\n\tand /* keep */ (max-width: 999px) {} 1`] = `

  1 | @media (min-width: 500px)
  2 | 	and /* keep */ (max-width: 999px) {}

`;

exports[`invalid(9): @media (min-width: 500px)\n\tand /* keep */ (max-width: 999px) {} 2`] = `

Message:
> 1 | @media (min-width: 500px)
    |        ^^^^^^^^^^^^^^^^^^ Prefer \`(width >= 500px)\` over \`(min-width: 500px)\`.
  2 | 	and /* keep */ (max-width: 999px) {}

Output:
  1 | @media (width >= 500px)
  2 | 	and /* keep */ (max-width: 999px) {}

`;

exports[`invalid(9): @media (min-width: 500px)\n\tand /* keep */ (max-width: 999px) {} 3`] = `

Message:
  1 | @media (min-width: 500px)
> 2 | 	and /* keep */ (max-width: 999px) {}
    | 	               ^^^^^^^^^^^^^^^^^^ Prefer \`(width <= 999px)\` over \`(max-width: 999px)\`.

Output:
  1 | @media (min-width: 500px)
  2 | 	and /* keep */ (width <= 999px) {}

`;
